--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,13 +8,15 @@ description = "Rust implementation of zengin code"
 repository = "https://github.com/kumanote/zengin-rs"
 readme = "README.md"
 keywords = ["zengin code", "jp"]
-build = "build.rs"
 
 [dependencies]
+anyhow = { version = "1.0", features = ["backtrace"] }
+thiserror = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+once_cell = "1.10.0"
+futures = "0.3"
 
-[build-dependencies]
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-# glob = "0.3.0"
+[dev-dependencies]
+serial_test = "0.6.0"
+tokio = { version = "1", features = ["full"] }
